--- a/fs-ui/package.json
+++ b/fs-ui/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "core-js": "^2.6.5",
     "node-fetch": "^3.2.10",
     "vue": "^2.6.10",
