--- a/fs-api/package.json
+++ b/fs-api/package.json
@@ -14,6 +14,7 @@
     "express-domain-middleware": "^0.1.0",
     "findit": "^2.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mv": "^2.1.1"
   }
 }
