--- a/fs-ui/package.json
+++ b/fs-ui/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.1.3",
     "core-js": "^2.6.5",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.10",
     "vue": "^2.6.10",
     "vue-router": "^3.1.5",
