--- a/eval-worker/requirements.txt
+++ b/eval-worker/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.0.2
 flask-restx==0.5.1
 flask_jwt_extended==4.2.3
+SQLAlchemy==1.4
 Flask-SQLAlchemy==2.5.1
 Flask-Cors==3.0.10
 pytest
@@ -15,15 +16,17 @@ flask_sqlalchemy==2.5.1
 email_validator==1.1.3
 python-dotenv==0.19.2
 Flask-Minify==0.37
-tensorflow==2.4.0
-keras==2.4.3
-numpy==1.19.3
-pillow==7.0.0
-scipy==1.4.1
-h5py==2.10.0
-matplotlib==3.3.2
-opencv-python
-keras-resnet==0.2.0
-imageai
+cython
+pillow>=7.0.0
+numpy>=1.18.1
+opencv-python>=4.1.2
+torch>=1.9.0 --extra-index-url https://download.pytorch.org/whl/cpu
+torchvision>=0.10.0 --extra-index-url https://download.pytorch.org/whl/cpu
+pytest==7.1.3
+tqdm==4.64.1
+scipy>=1.7.3
+matplotlib>=3.4.3
+mock==4.0.3
+imageai==3.0.3
 
 watchdog
